# os

./: Cargo.toml
.cargo/: config
crates/kern_test/: Cargo.toml
crates/kern_test/src/: lib.rs
src/: allocator.rs  error.rs  gdt.rs  interupt.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  slab.rs
tests/: basic_boot.rs  heap_allocations.rs  stack_overflow.rs
