[package]
name = "os"
version = "0.1.0"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5"
volatile = "0.2"
bootloader = "0.8"
x86_64 = "0.8"
uart_16550 = "0.2"
kern_test = { path = "./crates/kern_test" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
test-timeout = 300
test-success-exit-code = 33


[workspace]
members = [
    "crates/kern_test"
]
[[test]]
name = "stack_overflow"
harness = false